# FFmpeg-sandbox

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  IDEAS.md  LICENSE.md  README.md  STACK.md  Taskfile.yml  config.yml  docker-compose.yml  docker-entrypoint.sh  presets.yml  presets_themes.yml  pyproject.toml
.claude/: settings.json
app/: __init__.py  config.py  main.py  models.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMMON_TASKS.md  FILTERS.md  GETTING_STARTED.md  HTMX_PATTERNS.md  PROCESSING_FLOW.md  PROJECT_STRUCTURE.md  ROADMAP.md
plans/: 20251210_142848_audio-processor-spa.md  20251210_194145_docker-logging-entrypoint.md  20251210_221253_theme-system.md  20251210_224754_header-history-fix.md  20251210_231102_clip-range-slider.md  20251211_001436_visual-effect-chain-ui.md  20251211_010244_layout-and-effect-chain-fix.md  20251211_013001_filename-anonymization-ui-polish.md  20251211_014611_documentation-update.md  20251211_025536_effect-chain-accordion.md  20251211_043929_fix-effect-chain-preset-persistence.md  20251211_143906_preset-persistence-fix.md  20251213_000402_effects-panel-audio-video-tabs.md  20251213_025438_processor-refactor.md  20251213_031829_config-driven-presets.md  20251213_214634_ui-enhancements-format-dropdown-video-theming.md  20251217_203728_documentation-maintenance.md  20260106_175322_presets-tab-shortcuts-refactor.md  20260106_214358_roadmap-cleanup-and-renumbering.md  20260107_024310_roadmap-cleanup-and-renumbering.md  20260108_214646_create-application-stack-styling-template-document.md  (+11 more)
scripts/: clean.py  (+8 more)
(+84 files in other folders)
